Fixing slideshow text wrapping yet again @robindemourat I don't want to speak about it...

--- a/site/assets/scss/pages/index/slideshow/_slideshow-desktop.scss
+++ b/site/assets/scss/pages/index/slideshow/_slideshow-desktop.scss
@@ -131,6 +131,14 @@
                 -webkit-box-orient: vertical;
               }
 
+              .accroche {
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 4;
+                -webkit-box-orient: vertical;
+              }
+
               .more {
                 @include font-size-13();
                 color: $redlab;
